💎 Fix transaction spacing issue + allow public key selection

--- a/oridium-wallet/styles/base/layout/styles.css
+++ b/oridium-wallet/styles/base/layout/styles.css
@@ -29,6 +29,37 @@ html, body {
     width: 100%;
 }
 
+.button-menu-main {
+    background-color: #282A36;
+    border: 1px solid #DCCB92;
+    border-radius: 99px;
+    box-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
+    color: #EBE6D9;
+    max-width: 220px;
+    cursor: pointer;
+    padding: 10px;
+    transition: background-color 0.3s;
+    width: 100%;
+}
+
+.button-gold {
+    background-color: #DCCB92;
+    border: 1px solid #DCCB92;
+    border-radius: 99px;
+    box-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
+    color: #282A36;
+    cursor: pointer;
+    width: 220px;
+    padding: 10px;
+    text-align: center;
+    transition: background-color 0.3s;
+    width: 220px;
+  }
+  
+.button-gold:hover {
+    background-color: #c9b979;
+}
+
 .button-menu:hover {
     background-color: #282A36;
     border: 1px solid #DCCB92;
@@ -52,6 +83,12 @@ html, body {
     transition: background-color 0.1s;
     width: 100%;
 }
+
+.copy-icon {
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+  }
 
 .content {
     background-color: #282A36;
@@ -77,6 +114,24 @@ html, body {
     display: flex;
     flex: 1;
     flex-direction: column;
+}
+
+.key-display {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.keycode {
+    color: #EBE6D9;
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 14px;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    user-select: text;
 }
 
 .logo {
@@ -132,6 +187,27 @@ html, body {
     margin-bottom: auto;
 }
 
+.public-key-container {
+    align-items: center;
+    display: flex;
+    gap: 20px;
+    width: 100%;
+}
+  
+.public-key-info {
+    flex: 1;
+    display: flex;
+    background-color: #282A36;
+    border: 1px solid #DCCB92;
+    border-radius: 99px;
+    box-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
+    color: #EBE6D9;
+    height: 100%;
+    padding: 0 20px;
+    align-items: center;
+}
+
+
 .transaction-amount {
     color: #DCCB92;
     font-weight: 500;
@@ -170,12 +246,12 @@ html, body {
 }
 
 .transaction-row {
-    align-items: center;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-family: 'Space Grotesk', sans-serif;
     font-size: 14px;
     height: 40px;
-    justify-content: space-between;
     padding: 0 15px;
 }
 
